# auspex

./: Cargo.toml
migrations/: 20230105164010_stations_table.up.sql  20230105183632_locations_table.down.sql  20230105183632_locations_table.up.sql  20230106155310_readings_table.down.sql  20230106155310_readings_table.up.sql  20230114194954_indices.down.sql  20230114194954_indices.up.sql
src/: config.rs  lib.rs  main.rs
src/api/: location.rs  mod.rs  reading.rs  station.rs
src/models/: location.rs  mod.rs  reading.rs  station.rs
src/repository/: db.rs  mod.rs  query.rs
src/repository/queries/: location.rs  mod.rs  reading.rs  station.rs
src/services/: mod.rs  reading_service.rs  station_service.rs
