[package]
name = "auspex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres", "migrate", "chrono" ] }
dotenvy = "0.15"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.0"
env_logger = "0.9.0"
chrono = { version = "0.4.23", features = ["serde"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
anyhow = "1.0.68"
actix-cors = "0.6.4"
